--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "basic-auth": "2.0.1",
     "bcryptjs": "2.4.3",
     "class-validator": "0.12.2",
+    "mock-req": "0.2.0",
     "mongoose": "5.9.10",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
@@ -50,6 +51,7 @@
     "@types/node": "^13.9.1",
     "@types/passport-jwt": "3.0.3",
     "@types/passport-local": "1.0.33",
+    "@types/sinon": "9.0.0",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
@@ -58,6 +60,7 @@
     "eslint-plugin-import": "^2.20.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
+    "sinon": "9.0.2",
     "supertest": "^4.0.2",
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
